# scratchTesting

./: CMakeLists.txt
src/: BuisinessLogic.cpp  BuisinessLogic.h  CMakeLists.txt  Main.cpp
test/: CMakeLists.txt  testMain.cpp
